# napari-AFMReader

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  _version.py  pyproject.toml  setup.cfg
.github/workflows/: test-pypi.yaml  tests.yaml
napari-afmreader/src/napari_afmreader/: _reader.py  napari.yaml
napari-afmreader/src/napari_afmreader_tests/_tests/: conftest.py  test_reader.py
